# cnc-g-tools

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
doc/: g-code-rules.md  g-codes.md
src/: Makefile.am  axes.h  g-decoder.c  g-decoder.h  g-lexer.l  g-parser.y
src/code-gen/: build.sh  clean.sh  code-gen.l  code-gen.y  g-codes.def  run.sh
