# SPDX-License-Identifier: MIT
# Copyright © 2021 Gratian Crisan. All Rights Reserved.

AC_INIT([g_interp], [0.0.1], [gratian@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
AC_PROG_LEX([noyywrap])
AC_PROG_YACC
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
 src/Makefile
])
AC_CONFIG_MACRO_DIRS([m4])
AC_OUTPUT
